src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;

  /* font-family: 'Poppins', sans-serif; */
}

.nav-button {
  margin-top: 20px;
  font-size: 2vw;
  /* outline: auto; */
  border: solid 2px;
}

.nav-button:hover {
  border-color: purple;
  /* color: purple; */
}

.nav-button:active {
  transform: translate(1%, 1%);
}

.smaller {
  font-size: 0.8vw;
}

